--- a/public/locales/cs/common.json
+++ b/public/locales/cs/common.json
@@ -1,7 +1,7 @@
 {
     "solution-name": "Časovač",
     "footer": {
-        "copyright": "Timerise © 2023",
+        "copyright": "© 2023",
         "terms-and-conditions": "Podmínky a pravidla",
         "privacy-policy": "Zásady ochrany osobních údajů",
         "powered-by": "poháněné"
