--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -1,7 +1,7 @@
 {
   "solution-name": "Timerise",
   "footer": {
-    "copyright": "Timerise © 2023",
+    "copyright": "© 2023",
     "terms-and-conditions": "Geschäftsbedingungen",
     "privacy-policy": "Datenschutz-Bestimmungen",
     "powered-by": "powered by"
