--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -1,7 +1,7 @@
 {
     "solution-name": "Timerise",
     "footer": {
-        "copyright": "Timerise © 2023",
+        "copyright": "© 2023",
         "terms-and-conditions": "Condiciones generales",
         "privacy-policy": "Política de privacidad",
         "powered-by": "potenciado por"
