--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -1,7 +1,7 @@
 {
     "solution-name": "Timerise",
     "footer": {
-        "copyright": "Timerise © 2023",
+        "copyright": "© 2023",
         "terms-and-conditions": "Ehdot ja edellytykset",
         "privacy-policy": "Tietosuojakäytäntö",
         "powered-by": "powered by"
