--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -1,7 +1,7 @@
 {
     "solution-name": "Timerise",
     "footer": {
-        "copyright": "Timerise © 2023",
+        "copyright": "© 2023",
         "terms-and-conditions": "Conditions générales d'utilisation",
         "privacy-policy": "Politique de confidentialité",
         "powered-by": "alimenté par"
