--- a/public/locales/hu/common.json
+++ b/public/locales/hu/common.json
@@ -1,7 +1,7 @@
 {
     "solution-name": "Timerise",
     "footer": {
-        "copyright": "Timerise © 2023",
+        "copyright": "© 2023",
         "terms-and-conditions": "Feltételek és feltételek",
         "privacy-policy": "Adatvédelmi irányelvek",
         "powered-by": "powered by"
