--- a/public/locales/it/common.json
+++ b/public/locales/it/common.json
@@ -1,7 +1,7 @@
 {
     "solution-name": "Timerise",
     "footer": {
-        "copyright": "Timerise © 2023",
+        "copyright": "© 2023",
         "terms-and-conditions": "Termini e condizioni",
         "privacy-policy": "Informativa sulla privacy",
         "powered-by": "alimentato da"
