--- a/public/locales/nb/common.json
+++ b/public/locales/nb/common.json
@@ -1,7 +1,7 @@
 {
   "solution-name": "Timerise",
   "footer": {
-    "copyright": "Timerise © 2023",
+    "copyright": "© 2023",
     "terms-and-conditions": "Vilkår & Betingelser",
     "privacy-policy": "Personvernpolicy",
     "powered-by": "drevet av"
