--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -1,7 +1,7 @@
 {
   "solution-name": "Timerise",
   "footer": {
-    "copyright": "Timerise © 2023",
+    "copyright": "© 2023",
     "terms-and-conditions": "Regulamin",
     "privacy-policy": "Polityka Prywatności",
     "powered-by": "powered by"
