--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -1,7 +1,7 @@
 {
     "solution-name": "Timerise",
     "footer": {
-        "copyright": "Timerise © 2023",
+        "copyright": "© 2023",
         "terms-and-conditions": "Villkor och bestämmelser",
         "privacy-policy": "Integritetspolicy",
         "powered-by": "drivs av"
