--- a/public/locales/tr/common.json
+++ b/public/locales/tr/common.json
@@ -1,7 +1,7 @@
 {
     "solution-name": "Timerise",
     "footer": {
-        "copyright": "Timerise © 2023",
+        "copyright": "© 2023",
         "terms-and-conditions": "Şartlar ve Koşullar",
         "privacy-policy": "Gizlilik Politikası",
         "powered-by": "tarafından desteklenmektedir"
